@@ -14,6 +14,6 @@
 <tr><td valign="top" class="label">Description</td>
 <td class="desc">Reads and returns a token from the currently open file.  A token is any string of characters that is separated by a space, tab or newline character.</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Eof, Open, Readline, Reset, Write, Writeline</td></tr>
+<td class="seealso">Close, Eof, Open, Readline, Reset, Write, Writeline, Exists, Seek, Size</td></tr>
 </table>
 
