@@ -14,6 +14,6 @@
 <tr><td valign="top" class="label">Description</td>
 <td class="desc">Clears the currently open file.  All data stored in the file is lost.</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Eof, Open, Read, Readline, Write, Writeline</td></tr>
+<td class="seealso">Close, Eof, Open, Read, Readline, Write, Writeline, Exists, Seek, Size</td></tr>
 </table>
 
