@@ -8,12 +8,12 @@
 <body>
 <table class="cmdtable" cellpadding="5" border="0">
 <tr><td class="label">Command</td>
-<td class="cmdname">Readline</td></tr>
+<td class="cmdname">Seek</td></tr>
 <tr><td valign="top" class="label">Format</td>
-<td>readline</td></tr>
+<td>seek <i>position</i></td></tr>
 <tr><td valign="top" class="label">Description</td>
-<td class="desc">Reads and returns an entire line from the currently open file.</td></tr>
+<td class="desc">Moves the read/write location to a specific location within the currently open file.</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Eof, Open, Read, Reset, Write, WriteLine, Exists, Seek, Size</td></tr>
+<td class="seealso">Close, Eof, Read, Readline, Reset, Write, Writeline, Exists, Seek, Size</td></tr>
 </table>
 
