@@ -14,6 +14,6 @@
 <tr><td valign="top" class="label">Description</td>
 <td class="desc">Writes <i>string</i> as a line to the end of the currently open file.</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Eof, Open, Read, Readline, Reset, Write</td></tr>
+<td class="seealso">Close, Eof, Open, Read, Readline, Reset, Write, Exists, Seek, Size</td></tr>
 </table>
 
