@@ -1,3 +1,11 @@
+2009-11-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.3n
+
+	* added SIZE, EXISTS, and SEEK for use during file IO
+
+2009-11-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.3m
+
+	* rewrite popint/popfloat/popstring in interperter.cpp to return type not a stack value
+
 2009-11-01 j.m.reneau <renejm@users.sourceforge.net> 0.9.3l
 
 	* added alternate syntax of input statement to allow a numeric variable or array.  If non numeric
